Linkeo de galeria anchetas
Cambie la "g" de galería por una "G"

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h1 class="title">Galerías de trabajos</h1>
             <div class="container_cards">
                 <div class="card">
-                    <a href="galeria_Anchetas.html" target=""><img src="images/Random/Anchetas.png" alt="No disponible"></a>
+                    <a href="Galeria_Anchetas.html" target=""><img src="images/Random/Anchetas.png" alt="No disponible"></a>
                     <h4>Anchetas</h4>
                     <p>Anchetas para todo tipo de ocasión</p>
                 </div>
