Actualización de imagen de chica
chica con "c" por Chica con "C".

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 	<img class="wave" src="images/Login/wave.png" alt="Imagen de login, ola">
 	<div class="container">
 		<div class="img">
-			<img src="images/Login/chica.svg" alt="Imagen de login, chica">
+			<img src="images/Login/Chica.svg" alt="Imagen de login, chica">
 		</div>
 		<div class="login-content">
 			<form action="index.html">
